--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@neondatabase/serverless": "^0.10.4",
     "@upstash/redis": "^1.34.7",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "node-cron": "^3.0.3",
     "viem": "^2.33.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^22.10.5",
     "@types/node-cron": "^3.0.11",
