--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "test": "ts-node src/test.ts",
-    "build": "tsc",
-    "serve": "node dst/index.js"
+    "test": "ts-node src/test.ts"
   },
   "keywords": [
     "blockchain",
