--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simulate-onchain-actions",
+  "name": "mobula-test",
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
@@ -14,7 +14,7 @@
   ],
   "author": "SteffQing",
   "license": "ISC",
-  "description": "Personal project to simulate on-chain actions for testing purposes",
+  "description": "Mobula Test",
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
     "@upstash/redis": "^1.34.7",
